--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,26 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Centre LGBTQI+ Paris et d'Île-de-France</title>
+    <!-- Primary Meta Tags -->
+    <title>Centre LGBTQI+ IDF - Application</title>
+    <meta name="title" content="Centre LGBTQI+ IDF - Application">
+    <meta name="description" content="Internal NGO application to keep track of activities, visits and datavisualisation.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://metatags.io/">
+    <meta property="og:title" content="Centre LGBTQI+ IDF - Application">
+    <meta property="og:description" content="Internal NGO application to keep track of activities, visits and datavisualisation.">
+    <meta property="og:image" content="https://drive.google.com/file/d/1-mN6lK2nrxdvTdg50qopbMv6Hvp9u6LF/view?usp=sharing">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://metatags.io/">
+    <meta property="twitter:title" content="Centre LGBTQI+ IDF - Application">
+    <meta property="twitter:description" content="Internal NGO application to keep track of activities, visits and datavisualisation.">
+    <meta property="twitter:image" content="https://drive.google.com/file/d/1-mN6lK2nrxdvTdg50qopbMv6Hvp9u6LF/view?usp=sharing">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
